--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
-
 {
     "name": "employee-tracker",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "node index"
+        "start": "node index"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "inquirer": "8.2.4",
-      "mysql2": "^2.1.0"
+        "inquirer": "8.2.4",
+        "mysql2": "^2.1.0",
+        "prompt-sync": "^4.2.0"
     }
-  }  
+}
